--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tdplaylist.000webhostapp.com/",
+  "homepage": "http://tuanduong2920.github.io/320kbps",
   "name": "listen-music-app",
   "version": "0.1.0",
   "private": true,
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
     "fontsource-roboto": "^4.0.0",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-h5-audio-player": "^3.6.1",
