--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-h5-audio-player": "^3.6.1",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.3"
   },
