--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "fontsource-roboto": "^4.0.0",
     "gh-pages": "^3.1.0",
+    "js-file-download": "^0.4.12",
     "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-h5-audio-player": "^3.6.1",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.2",
-    "react-scripts": "4.0.3"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "soundcloud": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
